--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -5,5 +5,6 @@ COPY package.json .
 RUN npm install --omit=dev
 COPY . . 
 RUN npx prisma generate
+# RUN npx prisma migrate dev --name init
 
 CMD ["npm", "run", "dev"]         
