--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,11 +4,8 @@ metadata:
   name: multimaxx-platform
 manifests:
   rawYaml:
-    # Deploy database resources first
     - ./k8s/db/*.yaml
-    # Deploy service and deployment resources next
     - ./k8s/services/*.yaml
-    # Deploy ingress resources last
     - ./k8s/nginx/*.yaml
 build:
   artifacts:
@@ -16,5 +13,17 @@ build:
       context: ./auth
       docker:
         dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
+    - image: georgiiparla/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.{ts,tsx,jsx}'
+            dest: .
 deploy:
   kubectl: {}
